// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Toggle (snapshot) renders off state (default) 1`] = `
<button
  aria-pressed="false"
  class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium ring-offset-background transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-transparent h-10 min-w-10 px-3"
  data-state="off"
  type="button"
>
  Bold
</button>
`;

exports[`Toggle (snapshot) renders on state via defaultPressed 1`] = `
<button
  aria-pressed="true"
  class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium ring-offset-background transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-transparent h-10 min-w-10 px-3"
  data-state="on"
  type="button"
>
  Bold
</button>
`;

exports[`Toggle (snapshot) renders variant=outline 1`] = `
<button
  aria-pressed="false"
  class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-transparent hover:bg-accent hover:text-accent-foreground h-10 min-w-10 px-3"
  data-state="off"
  type="button"
>
  Bold
</button>
`;
